fied issues with overlapping annotations

--- a/static/css/jumbotron.css
+++ b/static/css/jumbotron.css
@@ -1,19 +1,16 @@
 html, body {
   height: 100%;
 }
-#wrap {
-  min-height: 100%;
-  height: 100%;
-  /* Negative indent footer by its height */
-  margin: 0 auto -72px 0;
-  /* Pad bottom by footer height */
-  padding: 0 0 70px 0;
+body{
+  padding-top: 50px;
 }
-#footer {
-  padding-top: 17px;
-  height: 70px;
+#info {
+  top:50px;
   background-color: #f5f5f5;
-  border-top: 3px solid #0d2c40;
+  height: 0;
+  border-bottom: 1px solid #DDD;
+  /*padding-top: 10px;
+  padding-bottom: 10px;*/
 }
 
 .center-container {
@@ -22,20 +19,22 @@ html, body {
   margin:0;
   overflow: hidden;
 }
-#wrap > .center-container {
-  padding: 60px 0 0 0;
-  margin:0;
-}
 
-.jumbotron{
+/*.jumbotron{
 	background: #fff url("../magnifier.jpg") center center;
     width: 100%;
     height: 100%;
     background-size: cover;
     overflow: hidden;
+}*/
+#top {
+  background-color: #0d2c40;
 }
-.navbar{
-	background-color: #0d2c40;
+.navbar-header a:hover{
+  color: #fff !important;
+}
+#intro{
+  margin-bottom: 20px;
 }
 #no, #na {
 	margin-left: 5px;
